--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <h1>ruiyi zheng</h1>
     <p>houston, i love coding</p>
+    <h3>javascript, html, css</h3>
+    <p>java, javascript, html, css</p>
+    <a href="https://github.com/YOURUSERNAMEHERE" target="_blank">My Github Profile</a>
   </body>
 </html>
