--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p>houston, i love coding</p>
     <h3>javascript, html, css</h3>
     <p>java, javascript, html, css</p>
-    <a href="https://github.com/YOURUSERNAMEHERE" target="_blank">My Github Profile</a>
+    <a href="https://github.com/zhengruiyi" target="_blank">My Github Profile</a>
   </body>
 </html>
